<resources>
    <string name="app_name">ChuiTour</string>
    <string name="burana">Башня Бурана</string>
    <string name="istoricheskie_dostopri">Исторические \n достопримечательности</string>
    <string name="bolee_1_2_chasa">1–2 часа</string>
    <string name="kol_tor">Озеро Кель-Тор</string>
    <string name="vodoemy">Водоемы</string>
    <string name="kegety_korge">Ущелье Кегеты</string>
    <string name="suusamyr">СУУСАМЫРСКАЯ ДОЛИНА</string>
    <string name="gory">Горы</string>
    <string name="chon_kemin">Чон-Кемин</string>
    <string name="nasional_park">Национальные парки</string>
    <string name="bolee_3_chasov">Более 3 часов</string>
    <string name="kegety_vodopad">Водопад Кара-Арча</string>
    <string name="net"> </string>
    <string name="ata_beit">Ата-Бейит</string>
    <string name="bolee_1_chas"> - 1 часа</string>
    <string name="pomaytniki">Памятники и статуи</string>
    <string name="tan_shan">Тянь-Шань</string>
    <string name="bolee_5_chasov">Более 5 часов</string>
    <string name="show_location">Показать в карте</string>
    <string name="dubrovski">Дубровский</string>
    <string name="supara">Supara Ethno Complex</string>
    <string name="sakura">Sakura</string>
    <string name="hawaiii">Гавайи</string>
    <string name="altyn_hazyna">Алтын Казына</string>
    <string name="traktyr">Traktyr</string>
    <string name="park">Парк Ресторан</string>
    <string name="siklon">Циклон</string>
    <string name="grand_otel_burana">Grand Hotel Burana</string>
    <string name="burana_location_hotel">Токмак 720001 Киргизия</string>
    <string name="burana_som">6 358 KGS</string>
    <string name="des_hotel_info">Grand Hotel Burana — это отличный выбор для гостей Токмака, множество полезных услуг сделают пребывание здесь очень приятным.

Номера оборудованы мини-баром, холодильником и кондиционером, а гости могут в любой момент быть онлайн благодаря бесплатному Wi-Fi, который предлагает отель.

Grand Hotel Burana предлагает круглосуточную стойку регистрации, услуги консьержа и обслуживание в номер, чтобы сделать пребывание гостей здесь еще более приятным. К услугам гостей также джакузи и лобби. Те, кто приезжает в Grand Hotel Burana на машине, могут воспользоваться бесплатной парковкой.

Путешественники, которым интересны барбекю-рестораны, могут сходить в Гавайи.

Желаем приятно провести время в Токмаке!</string>
    <string name="grand_otel_jekshen">Гостевой дом Jekshen</string>
    <string name="location_jekshen">Улица Бапаков дом 7, Кемин</string>
    <string name="jeskshen_som">2 798 KGS</string>
    <string name="des_hotel_jekshen">Гостевой дом Jekshen расположен в городе имени Карла Маркса. К услугам гостей общий лаундж, сад и бесплатный Wi-Fi. К услугам гостей общая кухня, доставка еды и напитков в номер и пункт обмена валюты.
Подробнее читайте на Booking.com </string>
    <string name="hotel_prime_time">Hotel Prime Time</string>
    <string name="prime_time_location_hotel">ул. Гагарина 18, Кант</string>
    <string name="prime_time_som">2 628 KGS</string>
    <string name="des_prime_time">Гостевой дом Prime Time расположен в Канте. К услугам гостей бар, сад, принадлежности для барбекю и бесплатный WiFi. В распоряжении гостей круглосуточная стойка регистрации, общая кухня и пункт обмена валюты.
Подробнее читайте на Booking.com </string>
    <string name="hotel_janat">Jannat Resort</string>
    <string name="janat_location_hotel">с. Кой-Таш 720060 Киргизия</string>
    <string name="janat_som">12 891 KGS</string>
    <string name="des_hotel_janat">Мы расположились в 24 км. от г. Бишкек в селе Кой-Таш, месте известном своими подземными источниками минеральных вод и изумительными красотами Аламединского ущелья. Для Гостей отеля доступны 86 комфортабельных номера 4 различных категорий, с захватывающими видами из окон.



Гордость отеля «Jannat Resort» - лечебно-оздоровительный комплекс, предлагающий лечение заболеваний опорно-двигательного аппарата, сердечнососудистой системы, заболеваний органов дыхания, заболеваний нервной системы, а также процедуры по омоложению и похудению.



Шеф-повар сети отелей Jannat Hotels Resorts сделает Ваше пребывание особенно приятным, предлагая блюда, разработанные с учетом местной палитры продуктов и специй, лучших международных практик и уникальных вкусовых сочетаний.



Вдохните поглубже чистого горного воздуха, который наполнит Вас силой, устремите взор на белоснежные горы полные духовности, устройте себе чайную церемонию на склоне горы, наблюдайте умиротворяющее течение реки и насладитесь живописными видами Кыргызстана, вдохновляющими на новые мысли, не отказываясь от удобств отеля уровня пяти звезд в горном отеле Jannat Resort.</string>
    <string name="hotel_maryotel">Отель Maryotel</string>
    <string name="maryotel_location_hotel">Pobeda avenue 351, Бишкек </string>
    <string name="maryotel_som">5 086 KGS</string>
    <string name="des_hotel_maryotel">Любой гость Бишкека в какой-то момент захочет отдохнуть. Отель Maryotel — прекрасный выбор для тех, кто хочет восстановить силы.

Номера оборудованы кондиционером и мини-кухней, а выйти в Сеть в Отель Maryotel очень просто благодаря бесплатному Wi-Fi.

Вы также можете воспользоваться следующими услугами, которые предлагает небольшой отель: круглосуточной стойкой регистрации, услугами консьержа и обслуживанием номеров. Кроме того, к услугам гостей есть фитнес-центр и бесплатный завтрак. Дополнительное удобство для гостей — бесплатная парковка.

Близкое расположение к одним из самых популярных достопримечательностей Бишкека, таким как Площадь Победы (3,6 км) и Фонтаны ЦУМ Айчурек (3,9 км), делает Отель Maryotel очень привлекательным для туристов.

Обязательно стоит сходить в популярный в Бишкеке ресторан, где подают пельмени, например в Бухара Кафе, расположенный рядом с Отель Maryotel.

Если вы хотите лучше узнать Бишкек, посетите одну из художественных галерей, например Выставочный Зал Союза Художников им. С.Чуйкова, Галерея М и SAIMALUU TASH Art Gallery.

Отель Maryotel сделает ваше пребывание в Бишкеке незабываемым.</string>
    <string name="hotel_futuro">Futuro Hotel</string>
    <string name="futuro_location_hotel">ул. Удмуртская 13 , Бишкек  </string>
    <string name="futuro_som">4 075 KGS</string>
    <string name="des_hotel_futuro">Отель Futuro находится в 7 минутах езды от центра города, в 2 минутах ходьбы от центрального проспекта Чуй, по которому Вы сможете добраться до любой точки города. Для Вашего удобства отель Futuro предлагает воспользоваться услугой бесплатного проката велосипедов для изучения достопримечательностей города,находящихся по тому же проспекту Чуй (Дом Правительства 4км,Музей им.Ленина 4км, Филармония 5 км, Ошский базар 6км,) Помимо услуг такси, Гости отеля могут воспользоваться муниципальным транспортом. Отель Futuro располагает бесплатным WiFi на всей территории. В течении дня всем Гостям предлагаются бесплатные закуски и чай,кофе в кафетерии отеля.Все номера оснащены кондиционером, ЖК-телевизором со спутниковыми каналами и собственной видеотекой в качестве HIGH DEFINITION и BLU-Ray. В каждом номере имеется собственная душевая комната с феном и бесплатными туалетно-косметическими принадлежностями. В ресторане с обслуживанием по меню подают блюда местной и европейской кухни.
Меньше данных</string>
    <string name="hotel_crocus">Guest House Crocus</string>
    <string name="crocus_location_hotel">ул. Комсомольская, 5, Бишкек </string>
    <string name="crocus_som">2 713 KGS</string>
    <string name="des_hotel_crocus">Ищете, где остановиться в Бишкеке? Можете больше не искать. Бюджетный гостевой дом Гостевой дом "Крокус" позволит вам познакомиться с Бишкеком наилучшим образом.

Услуги, предлагаемые Гостевой дом "Крокус": круглосуточная стойка регистрации и обмен валюты. Кроме того, гости Гостевой дом "Крокус" могут воспользоваться сауной и лобби. К услугам гостей на автомобиле — бесплатная парковка.

Тем, кто хочет посетить популярные достопримечательности во время пребывания в Бишкеке, следует учесть, что Гостевой дом "Крокус" расположен недалеко от таких достопримечательностей, как Площадь Победы (2,8 км) и Фонтаны ЦУМ Айчурек (3,1 км).

Обязательно стоит сходить в популярный в Бишкеке ресторан, где подают креветки, например в Обама Бар Гриль, расположенный рядом с Гостевой дом "Крокус".

И самое главное — проживая в Гостевой дом "Крокус", вы легко сможете посетить многие великолепные достопримечательности Бишкека, например Памятник Манасу Великому, Памятник погибшим за свободу и Памятник Чингизу Айтматову, которые являются популярными монументами.

Мы уверены, что Гостевой дом "Крокус" вам понравится. Проживая здесь, вы сможете увидеть все, что Бишкек предлагает гостям города.</string>
    <string name="hotel_resident">Resident Hotel Bishkek</string>
    <string name="resident_location_hotel">Юнусалиева, 102/4, Бишкек </string>
    <string name="resident_som">3 815 KGS</string>
    <string name="des_hotel_resident">Отель Резидент – это симбиоз природы и знойной тишины! – К услугам гостей отель «Резидент» предлагает уютные комфортабельные двухместные номера и номера повышенной комфортности, соответствующие Европейским стандартам. Элегантные интерьеры отеля выполнены в теплых светлых тонах, а оборудование отвечает всем современным требованиям. – Отель «Резидент» сочетает в себе уют домашнего очага и комфорт современной обстановки. Все номера выходят окнами на тихий закрытый двор, оснащены стеклопакетами и кондиционерами, имеют отдельную туалетную комнату с душевой кабиной и феном. В номерах к услугам наших гостей телевизор, спутниковое ТВ, wi-fi, а также холодильник и сейф для хранения ценных вещей. – Гостеприимный персонал, спокойная атмосфера, выгодное месторасположение сделают Ваш отдых максимально комфортными и приятными.</string>
    <string name="des_chon_kemin">Чем заняться в Чон-Кемине – туры и достопримечательности
Чон-Кеминское ущелье и долина – одна из самых живописных местностей на территории Киргизии, представляющие собой уникальный природный комплекс, куда входят ущелье, долина и, протекающая по долине река Чон-Кемин.

Река Чон-Кемин, берущая начало на стыке хребтов Кунгей-Ала-Тоо и Илийский Ала-Тоо, впадает в реку Чу в начале Боомского ущелья в Чуйской долине. Длина реки Чон-Кемин составляет 116 км. В бассейне реки находится 7 озёр. Река протекает по особо охраняемой территории государственного природного национального парка «Чон-Кемин».

Кроме того, река протекает по дну одноимённого ущелья Чон-Кемин, которое расположено в 150 км на восток от города Бишкека. На дне ущелья и находится Чон-Кеминская долина. Её ширина составляет 6 км, а длина 12 км. Вся долина покрыта зелёными лугами, а по склонам ущелья растут еловые леса. В сочетании с ледниками, покрывающими горные хребты, все это производит неизгладимое впечатление на путешественников.

Еще одной достопримечательностью долины реки Чон-Кемин является национальный природный парк, площадью 500 га. В 1997 году в долине реки Чон-Кемин был создан Национальный парк, к которому Постановлением Правительства Кыргызской Республики отнесены все лесные хозяйства Кеминского района. Парк находится под охраной государства, так как на его территории находятся уникальные виды флоры и фауны, такие как заяц-толай, фазан, а так же хвоя-эфедра.

Чон-Кемин – уникальный природный заповедник, где естественные ландшафты остались почти в нетронутом виде. Здесь ледники соседствуют с зелёными хвойными лесами и степными районами. С трех сторон долина закрыта хребтами и лежит на высоте от 1400 до 2800 м над уровнем моря. Если внизу в долине царит тепло, и цветут зелёные луга, то на высоте 4700 м на хребтах Кунгей-Ала-Тоо и Илийский Ала-Тоо лежат вечные снега.

Чон-Кемин – является раем для поклонников экстремального туризма и любителей путешествовать по живописным местностям. Здесь каждый найдет свое: будь то опасные отроги рек или же крутые склоны гор, а может просто насладится природой долины Чон-Кемин.</string>
</resources>