<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.DetalFragment">


    <ImageView
        android:id="@+id/imgDetal"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/chon_kemin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDetal" />

    <ImageView
        android:id="@+id/imgDetallocation"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_location"
        app:layout_constraintBottom_toTopOf="@+id/scroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/txtDetalLocation" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDetal3">

        <TextView
            android:id="@+id/txtDetal4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/des_chon_kemin" />
    </ScrollView>

    <TextView
        android:id="@+id/txtDetal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/bolee_3_chasov"
        app:layout_constraintEnd_toEndOf="@id/txtDetal2"
        app:layout_constraintStart_toStartOf="@id/txtDetal2"
        app:layout_constraintTop_toBottomOf="@+id/txtDetal2" />

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/txtDetalLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_location"
        app:layout_constraintBottom_toTopOf="@+id/imgDetallocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/imgDetal" />

    <TextView
        android:id="@+id/txtDetal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/chon_kemin"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:gravity="center"
        android:layout_marginStart="40dp"
        android:id="@+id/txtDetal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/istoricheskie_dostopri"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/barrier2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDetal" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="txtDetal2, txtDetal3" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="txtDetalLocation, imgDetallocation" />

</androidx.constraintlayout.widget.ConstraintLayout>